workspace-sf/force-app/main/default/objects/FranquiaGarantia__c/FranquiaGarantia__c.object-meta.xml
<CustomObject>
    <description>Objeto de relacionamento entre as garantias e as franquias</description>
    <label>Franquia da garantia</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Franquias da garantia</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>