workspace-sf/force-app/main/default/objects/FranquiaGarantia__c/fields/CodigoFranquia__c.field-meta.xml
<CustomField>
    <fullName>CodigoFranquia__c</fullName>
    <formula>Franquia__r.CodigoFranquia__c</formula>
    <label>Codigo da Fraquia</label>
    <type>Text</type>
</CustomField>