workspace-sf/force-app/main/default/objects/FranquiaGarantia__c/fields/Franquia__c.field-meta.xml
<CustomField>
    <fullName>Franquia__c</fullName>
    <label>Franquia</label>
    <referenceTo>Franquia__c</referenceTo>
    <relationshipName>FranquiasCobertura</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>