workspace-sf/force-app/main/default/objects/FranquiaGarantia__c/fields/Franquia_Padrao__c.field-meta.xml
<CustomField>
    <fullName>Franquia_Padrao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Franquia Padrão</label>
    <type>Checkbox</type>
</CustomField>