workspace-sf/force-app/main/default/objects/FranquiaGarantia__c/fields/FranquiaGarantia__c.field-meta.xml
<CustomField>
    <fullName>FranquiaGarantia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Franquia da garantia</label>
    <referenceTo>FranquiaGarantia__c</referenceTo>
    <relationshipLabel>Franquias da garantia</relationshipLabel>
    <relationshipName>FranquiasGarantia</relationshipName>
    <type>Lookup</type>
</CustomField>