workspace-sf/force-app/main/default/objects/FranquiaGarantia__c/fields/GarantiaProduto__c.field-meta.xml
<CustomField>
    <fullName>GarantiaProduto__c</fullName>
    <label>Garantia do produto</label>
    <referenceTo>GarantiaProduto__c</referenceTo>
    <relationshipLabel>Franquias da garantia</relationshipLabel>
    <relationshipName>FranquiasGarantia</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>