workspace-sf/force-app/main/default/objects/FranquiaGarantia__c/validationRules/BloquearCriacaoFranquiaGarantia.validationRule-meta.xml
<ValidationRule>
    <fullName>BloquearCriacaoFranquiaGarantia</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
					ISNEW(),
				 ISBLANK( FranquiaGarantia__c ) ,
				 GarantiaProduto__r.RecordType.DeveloperName = &apos;ProdutoComercial&apos;
)</errorConditionFormula>
    <errorMessage>Não é possível criar uma Franquia de Garantia de um Produto Comercial.</errorMessage>
</ValidationRule>