workspace-sf/force-app/main/default/objects/FranquiaGarantia__c/validationRules/BloquearEdicaoFranquiaGarantia.validationRule-meta.xml
<ValidationRule>
    <fullName>BloquearEdicaoFranquiaGarantia</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
					NOT(ISNEW()),
				 RecordType.DeveloperName = &apos;ProdutoComercial&apos;
)</errorConditionFormula>
    <errorMessage>Não é possível editar uma Franquia de Garantia de um Produto Comercial.</errorMessage>
</ValidationRule>